:bug: :apple: Fixing Game theme font size to be compatible in Mac
 - Using 'pt' unit in stylesheets are resulting in very different/small
font sizes in Mac. This commit is changing the font unit to 'px' to get
the same visual in all platforms.

--- a/src/resources/css/themes/Game_nm/Chat.css
+++ b/src/resources/css/themes/Game_nm/Chat.css
@@ -83,5 +83,5 @@ ChatMessagePanel #labelMessage
     selection-color: rgb(40, 40, 40);
     color: black;
     font-family: "Noto Mono";
-    font-size: 9pt;
+    font-size: 12px;
 }
