Improving includes hierarchy

--- a/src/Common/gui/LooperWindow.ui
+++ b/src/Common/gui/LooperWindow.ui
@@ -442,18 +442,18 @@
   <customwidget>
    <class>AudioMeter</class>
    <extends>QWidget</extends>
-   <header>PeakMeter.h</header>
+   <header>widgets/PeakMeter.h</header>
    <container>1</container>
   </customwidget>
   <customwidget>
    <class>Slider</class>
    <extends>QSlider</extends>
-   <header>Slider.h</header>
+   <header>widgets/Slider.h</header>
   </customwidget>
   <customwidget>
    <class>BlinkableButton</class>
    <extends>QPushButton</extends>
-   <header>BlinkableButton.h</header>
+   <header>widgets/BlinkableButton.h</header>
   </customwidget>
  </customwidgets>
  <resources>
