--- a/src/Common/gui/MetronomePanel.ui
+++ b/src/Common/gui/MetronomePanel.ui
@@ -65,7 +65,7 @@
         <string/>
        </property>
        <property name="pixmap">
-        <pixmap resource="../../resources/jamtaba.qrc">:/images/level low.png</pixmap>
+        <pixmap>:/images/level low.png</pixmap>
        </property>
       </widget>
      </item>
@@ -115,7 +115,7 @@
         <string/>
        </property>
        <property name="pixmap">
-        <pixmap resource="../../resources/jamtaba.qrc">:/images/level high.png</pixmap>
+        <pixmap>:/images/level high.png</pixmap>
        </property>
       </widget>
      </item>
@@ -306,7 +306,7 @@
         <string/>
        </property>
        <property name="icon">
-        <iconset resource="../../resources/jamtaba.qrc">
+        <iconset>
          <normaloff>:/images/windows.png</normaloff>:/images/windows.png</iconset>
        </property>
        <property name="checkable">
@@ -329,7 +329,7 @@
         <string/>
        </property>
        <property name="icon">
-        <iconset resource="../../resources/jamtaba.qrc">
+        <iconset>
          <normaloff>:/images/gear-hover.png</normaloff>:/images/gear-hover.png</iconset>
        </property>
       </widget>
@@ -342,18 +342,15 @@
   <customwidget>
    <class>AudioMeter</class>
    <extends>QWidget</extends>
-   <header>PeakMeter.h</header>
+   <header>widgets/PeakMeter.h</header>
    <container>1</container>
   </customwidget>
   <customwidget>
    <class>Slider</class>
    <extends>QSlider</extends>
-   <header>Slider.h</header>
+   <header>widgets/Slider.h</header>
   </customwidget>
  </customwidgets>
- <resources>
-  <include location="../../resources/jamtaba.qrc"/>
-  <include location="../../resources/jamtaba.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
