--- a/src/Common/gui/MainWindow.ui
+++ b/src/Common/gui/MainWindow.ui
@@ -686,22 +686,21 @@
   <customwidget>
    <class>AudioMeter</class>
    <extends>QWidget</extends>
-   <header>PeakMeter.h</header>
+   <header>widgets/PeakMeter.h</header>
    <container>1</container>
   </customwidget>
   <customwidget>
    <class>Slider</class>
    <extends>QSlider</extends>
-   <header>Slider.h</header>
+   <header>widgets/Slider.h</header>
   </customwidget>
   <customwidget>
    <class>UserNameLineEdit</class>
    <extends>QLineEdit</extends>
-   <header>UserNameLineEdit.h</header>
+   <header>gui/widgets/UserNameLineEdit.h</header>
   </customwidget>
  </customwidgets>
  <resources>
-  <include location="../../resources/jamtaba.qrc"/>
   <include location="../../resources/jamtaba.qrc"/>
  </resources>
  <connections/>
