--- a/src/Common/gui/PrivateServerDialog.ui
+++ b/src/Common/gui/PrivateServerDialog.ui
@@ -232,7 +232,7 @@
   <customwidget>
    <class>UserNameLineEdit</class>
    <extends>QLineEdit</extends>
-   <header>UserNameLineEdit.h</header>
+   <header>gui/widgets/UserNameLineEdit.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
