--- a/src/Common/gui/UserNameDialog.ui
+++ b/src/Common/gui/UserNameDialog.ui
@@ -92,7 +92,7 @@
   <customwidget>
    <class>UserNameLineEdit</class>
    <extends>QLineEdit</extends>
-   <header>UserNameLineEdit.h</header>
+   <header>widgets/UserNameLineEdit.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
