--- a/src/resources/css/themes/Ice/Dialogs.css
+++ b/src/resources/css/themes/Ice/Dialogs.css
@@ -1,6 +1,7 @@
 /* Dialogs in Ice theme
 -------------------------------------*/
 
+PrivateServerWindow,
 PreferencesDialog
 {
     background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
