--- a/src/resources/css/themes/Volcano_nm/Dialogs.css
+++ b/src/resources/css/themes/Volcano_nm/Dialogs.css
@@ -1,6 +1,7 @@
 /* Dialogs in Volcano theme
 -------------------------------------*/
 
+PrivateServerWindow,
 PreferencesDialog
 {
     background-color: #BD5A1D;
