Fixing widgets import

--- a/src/Common/gui/MainWindow.ui
+++ b/src/Common/gui/MainWindow.ui
@@ -693,13 +693,13 @@
   <customwidget>
    <class>AudioMeter</class>
    <extends>QWidget</extends>
-   <header>widgets/PeakMeter.h</header>
+   <header>gui/widgets/PeakMeter.h</header>
    <container>1</container>
   </customwidget>
   <customwidget>
    <class>Slider</class>
    <extends>QSlider</extends>
-   <header>widgets/Slider.h</header>
+   <header>gui/widgets/Slider.h</header>
   </customwidget>
   <customwidget>
    <class>UserNameLineEdit</class>
@@ -708,6 +708,7 @@
   </customwidget>
  </customwidgets>
  <resources>
+  <include location="../../resources/jamtaba.qrc"/>
   <include location="../../resources/jamtaba.qrc"/>
  </resources>
  <connections/>
