Setting PrivateServerWindow title as translatable

--- a/src/Common/gui/PrivateServerWindow.ui
+++ b/src/Common/gui/PrivateServerWindow.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string notr="true">Hosting Ninjam Private Server</string>
+   <string>Hosting Ninjam Private Server</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
